force-app/main/default/objects/Mentor__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Role_Details_and_Notes__c</fullName>
        <label>Additional Role Details and Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Received_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Application Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_Check_Completed_Date__c</fullName>
        <label>Background Check Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Interview__c</fullName>
        <label>Date of Interview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <formula>IF((Total_Openings__c - Number_of_Mentees_Accepted__c)&gt;0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Responsibilities__c</fullName>
        <description>The dependent picklist from the job category</description>
        <label>Job Responsibilities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Mentoring_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition integration</fullName>
                </value>
                <value>
                    <fullName>Application management</fullName>
                </value>
                <value>
                    <fullName>Build customer demos</fullName>
                </value>
                <value>
                    <fullName>Build customer proposals</fullName>
                </value>
                <value>
                    <fullName>Build sound financial plans</fullName>
                </value>
                <value>
                    <fullName>Campaign creation</fullName>
                </value>
                <value>
                    <fullName>Capacity planning</fullName>
                </value>
                <value>
                    <fullName>Coach new hires</fullName>
                </value>
                <value>
                    <fullName>Create internal marketing campaigns</fullName>
                </value>
                <value>
                    <fullName>Create marketing collateral</fullName>
                </value>
                <value>
                    <fullName>Create strategic reports</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Customer visits</fullName>
                </value>
                <value>
                    <fullName>Develop code</fullName>
                </value>
                <value>
                    <fullName>Develop HR policy</fullName>
                </value>
                <value>
                    <fullName>Develop product roadmaps</fullName>
                </value>
                <value>
                    <fullName>Drive customer adoption</fullName>
                </value>
                <value>
                    <fullName>Drive sales productivity</fullName>
                </value>
                <value>
                    <fullName>Engage with non profits</fullName>
                </value>
                <value>
                    <fullName>Engineering management</fullName>
                </value>
                <value>
                    <fullName>Evaluate contracts</fullName>
                </value>
                <value>
                    <fullName>Feature prioritization</fullName>
                </value>
                <value>
                    <fullName>Field event organization</fullName>
                </value>
                <value>
                    <fullName>Financial analysis</fullName>
                </value>
                <value>
                    <fullName>Handle customer objections</fullName>
                </value>
                <value>
                    <fullName>Hiring</fullName>
                </value>
                <value>
                    <fullName>Manage a distributed team</fullName>
                </value>
                <value>
                    <fullName>Manage a team</fullName>
                </value>
                <value>
                    <fullName>Manage badging</fullName>
                </value>
                <value>
                    <fullName>Manage business processes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mentor_Location__c</fullName>
        <description>The location of the job shadow host</description>
        <formula>CreatedBy.City + &quot;,&quot;  + CreatedBy.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The location of the job shadow host</inlineHelpText>
        <label>Mentor Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor_Name__c</fullName>
        <description>The Job Shadow Host&apos;s name</description>
        <formula>CreatedBy.FirstName+&quot; &quot;+CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mentor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentoring_Category__c</fullName>
        <label>Mentoring Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration and Operations</fullName>
                </value>
                <value>
                    <fullName>Corporate Development</fullName>
                </value>
                <value>
                    <fullName>Enterprise Strategy</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology/Security</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Product Engineering</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Engineering</fullName>
                </value>
                <value>
                    <fullName>Technical Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Mentees_Accepted__c</fullName>
        <label>Number of Mentees_Accepted</label>
        <summaryFilterItems>
            <field>Mentee__c.Application_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Mentee__c.Mentor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Orientation_Date__c</fullName>
        <label>Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>References_Received_Date__c</fullName>
        <label>References Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Openings__c</fullName>
        <defaultValue>3</defaultValue>
        <description>The amount of available mentee slots the mentor has available.</description>
        <inlineHelpText>The amount of available mentee slots the mentor has available.</inlineHelpText>
        <label>Total Openings</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mentor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Mentor_Name__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mentor Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mentors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>